--- a/Acerca.html
+++ b/Acerca.html
@@ -15,7 +15,7 @@
 
                 <ul class="nav-menu">
  
-                    <li class="nmi"><a href="Indice2.html" class="nml navml">Datos personales</a></li>
+                    <li class="nmi"><a href="info.html" class="nml navml">Datos personales</a></li>
                     <li class="nmi"><a href="Academia.html" class="nml navml">Formación académica</a></li>
                     <li class="nmi"><a href="Laboral.html" class="nml navml">Laboral</a></li>
                     <li class="nmi"><a href="Acerca.html" class="nml navml">Acerca de mi</a></li>
