--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,7 @@
     <head>
       <title>Document</title>
        
-        <link rel="stylesheet" href="Estilo3.css">
-        <link rel="stylesheet" href="Estilo2.css">
-        <link rel="stylesheet" href="Estilo4.css">
+        <link rel="stylesheet" href="Estilo.css">
         <script defer src="index.js"></script>
     </head>
 <body>
