--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 ﻿<html lang="en">
     <head>
+        <meta charset="UTF-8"
       <title>Document</title>
-       
         <link rel="stylesheet" href="Estilo.css">
         <script defer src="index.js"></script>
     </head>
